# wordle-solver

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
notebooks/: Wordle.ipynb  requirements.txt
src/wordle_solver/: __init__.py  analysis.py  cli.py  play.py  scores.json  solve.py  solver.py
tests/: conftest.py  test_solver.py  test_wordle_solver.py
